--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,80 +2,110 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, develop ]
   pull_request:
+    branches: [ main, develop ]
 
 jobs:
-  lint-and-test:
-    name: Lint and Test
+  lint:
+    name: Lint
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+    - uses: actions/checkout@v4
+    
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.21'
+        
+    - name: golangci-lint
+      uses: golangci/golangci-lint-action@v3
+      with:
+        version: latest
+        args: --timeout=5m
 
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: '1.22'
-          cache: true
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go-version: ['1.20', '1.21']
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: ${{ matrix.go-version }}
+        
+    - name: Cache Go modules
+      uses: actions/cache@v3
+      with:
+        path: ~/go/pkg/mod
+        key: ${{ runner.os }}-go-${{ matrix.go-version }}-${{ hashFiles('**/go.sum') }}
+        restore-keys: |
+          ${{ runner.os }}-go-${{ matrix.go-version }}-
+          
+    - name: Download dependencies
+      run: go mod download
+      
+    - name: Run unit tests
+      run: go test -v -race -coverprofile=coverage.out ./...
+      
+    - name: Upload coverage to Codecov
+      if: matrix.go-version == '1.21'
+      uses: codecov/codecov-action@v3
+      with:
+        file: ./coverage.out
+        flags: unittests
+        name: codecov-umbrella
 
-      - name: Run unit tests
-        run: go test ./...
-
-      - name: Run unit tests with race detector
-        run: go test -race ./...
-
-      - name: Run golangci-lint
-        uses: golangci/golangci-lint-action@v4
-        with:
-          version: v2.1.6
-          args: --timeout=5m
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.21'
+        
+    - name: Build with CGO disabled
+      run: CGO_ENABLED=0 go build -v ./cmd/scheduler
+      
+    - name: Test with CGO disabled
+      run: CGO_ENABLED=0 go test -v ./...
+      
+    - name: Build for multiple platforms
+      run: |
+        GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -o scheduler-linux-amd64 ./cmd/scheduler
+        GOOS=darwin GOARCH=amd64 CGO_ENABLED=0 go build -o scheduler-darwin-amd64 ./cmd/scheduler
+        GOOS=windows GOARCH=amd64 CGO_ENABLED=0 go build -o scheduler-windows-amd64.exe ./cmd/scheduler
 
   coverage:
-    name: Enforce Coverage Threshold
+    name: Coverage Check
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: '1.22'
-          cache: true
-
-      - name: Run coverage tests
-        run: go test -covermode=atomic -coverprofile=coverage.out ./internal/application ./internal/persistence
-
-      - name: Verify coverage meets threshold
-        shell: bash
-        run: |
-          set -euo pipefail
-          total=$(go tool cover -func=coverage.out | awk 'END{print $3}')
-          python - <<'PY' "$total"
-import sys
-coverage = float(sys.argv[1].rstrip('%'))
-threshold = 80.0
-if coverage < threshold:
-    print(f"coverage {coverage:.2f}% is below required {threshold:.2f}%")
-    sys.exit(1)
-print(f"coverage {coverage:.2f}% meets required {threshold:.2f}%")
-PY
-
-  go-test-cgo-disabled:
-    name: Tests with CGO disabled
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: '1.22'
-          cache: true
-
-      - name: Run tests without CGO
-        env:
-          CGO_ENABLED: "0"
-        run: go test ./...
+    - uses: actions/checkout@v4
+    
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.21'
+        
+    - name: Run tests with coverage
+      run: go test -v -coverprofile=coverage.out ./...
+      
+    - name: Check coverage threshold
+      run: |
+        COVERAGE=$(go tool cover -func=coverage.out | grep total | awk '{print $3}' | sed 's/%//')
+        THRESHOLD=80
+        echo "Current coverage: ${COVERAGE}%"
+        echo "Required threshold: ${THRESHOLD}%"
+        if (( $(echo "$COVERAGE < $THRESHOLD" | bc -l) )); then
+          echo "Coverage ${COVERAGE}% is below threshold ${THRESHOLD}%"
+          exit 1
+        else
+          echo "Coverage ${COVERAGE}% meets threshold ${THRESHOLD}%"
+        fi
