goのバージョン誤りの修正

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.21'
+        go-version: '1.24'
         
     - name: golangci-lint
       uses: golangci/golangci-lint-action@v3
@@ -29,7 +29,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: ['1.20', '1.21']
+        go-version: ['1.24']
     steps:
     - uses: actions/checkout@v4
     
@@ -53,7 +53,7 @@ jobs:
       run: go test -v -race -coverprofile=coverage.out ./...
       
     - name: Upload coverage to Codecov
-      if: matrix.go-version == '1.21'
+      if: matrix.go-version == '1.24'
       uses: codecov/codecov-action@v3
       with:
         file: ./coverage.out
@@ -69,7 +69,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.21'
+        go-version: '1.24'
         
     - name: Build with CGO disabled
       run: CGO_ENABLED=0 go build -v ./cmd/scheduler
@@ -92,7 +92,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.21'
+        go-version: '1.24'
         
     - name: Run tests with coverage
       run: go test -v -coverprofile=coverage.out ./...
@@ -103,7 +103,7 @@ jobs:
         THRESHOLD=80
         echo "Current coverage: ${COVERAGE}%"
         echo "Required threshold: ${THRESHOLD}%"
-        if (( $(echo "$COVERAGE < $THRESHOLD" | bc -l) )); then
+        if [ $(echo "$COVERAGE < $THRESHOLD" | awk '{print ($1 < $3)}') -eq 1 ]; then
           echo "Coverage ${COVERAGE}% is below threshold ${THRESHOLD}%"
           exit 1
         else
